2007-11-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_draw): use
	cairo_save()/cairo_restore() around calling the virtual function
	instead of restoring the clipping area manually.

2007-11-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrenderervectors.c
	(gimp_view_renderer_vectors_draw): naive port to Cairo. Somebody
	should check if this isn't better done with proper curve_to()
	drawing using the original vectors data instead of interpolation.

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_draw): reset
	clipping before drawing the border because a subclass' draw()
	might have done additional clipping.

2007-11-13  Tor Lillqvist  <tml@novell.com>

	* gimptool-win32.c.in: Some cleanups, more coming.

2007-11-13  Sven Neumann  <sven@gimp.org>

	Fix for bug #494049 (painting doesn't update the histogram):

	* app/paint/gimppaintcore.c: freeze the drawable preview while we
	are painting. Update the drawable instead of the image.

	* app/widgets/gimphistogrameditor.c: use a short timeout instead
	of an idle handler to update the histogram.

2007-11-13  Tor Lillqvist  <tml@novell.com>

	* gimp-zip.in: Drop the timestamp from the zip file names. Add the
	.pc files to the developer package.

2007-11-13  Michael Natterer  <mitch@gimp.org>

	Enable brush scaling for smudge (but only before, not while
	painting). Fixes bug #471348.

	* app/paint/gimpbrushcore.[ch] (struct GimpBrushCoreClass): rename
	member "use_scale" to "handles_scaling_brush".

	(gimp_brush_core_calc_brush_scale): apply pressure scale only if
	both "handles_scaling_brush" and "use_pressure" are TRUE, and
	apply the scaling from the options unconditionally.

	(gimp_brush_core_get_paint_area): don't re-fetch core->scale if
	"handles_scaling_brush" is FALSE to keep the brush from scaling
	*while* painting.

	(gimp_brush_core_create_bound_segs): use the brush scale from the
	options unconditionally since that's always used now.
